[tool.poetry]
name = "analysis-keyword-using-ginza"
version = "0.1.0"
description = ""
authors = ["sattosan <sato.yuya1211@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ginza = "^5.0.3"
ja-ginza = "^5.0.0"
emoji = "^1.6.1"
mojimoji = "^0.0.12"
asyncio = "^3.4.3"
tqdm = "^4.62.3"
neologdn = "^0.5.1"
matplotlib = "^3.5.0"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
